--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,24 +3,25 @@ aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
 alembic==1.7.7; python_version >= "3.6"
-astroid==2.9.3; python_full_version >= "3.6.2"
+astroid==2.11.3; python_full_version >= "3.6.2"
 async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-black==22.1.0; python_full_version >= "3.6.2"
+black==22.3.0; python_full_version >= "3.6.2"
 blinker==1.4; python_version >= "3.7" and python_full_version >= "3.7.0"
 cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
 charset-normalizer==2.0.12; python_full_version >= "3.5.0" and python_version >= "3.6"
-click==8.0.4; python_version >= "3.7" and python_full_version >= "3.7.0"
+click==8.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 colorama==0.4.4; python_full_version >= "3.6.2" and platform_system == "Windows" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
 coverage==6.3.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 cryptography==3.4.8; python_version >= "3.6"
 cycler==0.11.0; python_version >= "3.7"
+dill==0.3.4; python_full_version >= "3.6.2"
 essential-generators==1.0
-extra-data==1.8.1; python_version >= "3.6"
+extra-data==1.11.0; python_version >= "3.6"
 fire==0.4.0
-fonttools==4.30.0; python_version >= "3.7"
+fonttools==4.32.0; python_version >= "3.7"
 frozenlist==1.3.0; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
@@ -32,41 +33,41 @@ hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 hypothesis==6.27.1; python_version >= "3.6"
 idna==3.3; python_version >= "3.6"
 importlib-metadata==4.11.3; python_version < "3.9" and python_version >= "3.7"
-importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
+importlib-resources==5.7.1; python_version < "3.9" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 isodate==0.6.1
 isort==5.10.1; python_full_version >= "3.6.2" and python_version < "4.0"
-itsdangerous==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
-jinja2==3.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
+itsdangerous==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
+jinja2==3.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 karabo-bridge==0.6.1
-kiwisolver==1.3.2; python_version >= "3.7"
+kiwisolver==1.4.2; python_version >= "3.7"
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 mako==1.2.0; python_version >= "3.7"
-markupsafe==2.1.0; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 matplotlib==3.5.1; python_version >= "3.7"
-mccabe==0.6.1; python_full_version >= "3.6.2"
+mccabe==0.7.0; python_version >= "3.6" and python_full_version >= "3.6.2"
 msgpack-numpy==0.4.7.1
 msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
-mypy==0.940; python_version >= "3.6"
+mypy==0.942; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
-pillow==9.0.1; python_version >= "3.7"
+pillow==9.1.0; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
-platformdirs==2.5.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pydantic==1.8.2; python_full_version >= "3.6.1"
 pyfakefs==4.5.3; python_version >= "3.6"
-pylint==2.12.2; python_full_version >= "3.6.2"
+pylint==2.13.5; python_full_version >= "3.6.2"
 pymysql==1.0.2; python_version >= "3.6"
-pyparsing==3.0.7; python_version >= "3.7"
+pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.7"
 pytest-asyncio==0.17.2; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-subprocess==1.4.1; python_version >= "3.6"
@@ -77,28 +78,28 @@ pytz==2021.3
 pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
-quart==0.16.2; python_version >= "3.7"
+quart==0.17.0; python_version >= "3.7"
 randomname==0.1.5
 setuptools-scm==6.4.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1"
 sortedcontainers==2.4.0; python_version >= "3.6"
-sqlalchemy2-stubs==0.0.2a20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+sqlalchemy2-stubs==0.0.2a22; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.6.2" and python_version >= "3.7" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.2
 types-python-dateutil==2.8.3
-types-pytz==2021.3.5
+types-pytz==2021.3.6
 types-pyyaml==5.4.12
 types-requests==2.26.0
-typing-extensions==4.1.1; python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
+typing-extensions==4.2.0; python_version >= "3.7" and python_full_version >= "3.6.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
 typing-inspect==0.7.1
-werkzeug==2.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
-wrapt==1.13.3; python_full_version >= "3.6.2"
+werkzeug==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
+wrapt==1.14.0; python_full_version >= "3.6.2"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 xarray==2022.3.0; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
-zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
+zipp==3.8.0; python_version < "3.9" and python_version >= "3.7"
