--- a/.pylintrc
+++ b/.pylintrc
@@ -31,7 +31,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint.extensions.typing
+load-plugins=pylint.extensions.typing,pylint.extensions.redefined_variable_type
 
 # Pickle collected data for later comparisons.
 persistent=yes
