--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,9 +19,10 @@ cryptography==3.4.8; python_version >= "3.6"
 cycler==0.11.0; python_version >= "3.7"
 dill==0.3.4; python_full_version >= "3.6.2"
 essential-generators==1.0
+et-xmlfile==1.1.0; python_version >= "3.6"
 extra-data==1.11.0; python_version >= "3.6"
 fire==0.4.0
-fonttools==4.32.0; python_version >= "3.7"
+fonttools==4.33.3; python_version >= "3.7"
 frozenlist==1.3.0; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
@@ -53,6 +54,8 @@ multidict==6.0.2; python_version >= "3.7"
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
 mypy==0.942; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
+openpyxl-stubs==0.1.21
+openpyxl==3.0.9; python_version >= "3.6"
 packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
