DB/Overview UI: Add “live stream image” support

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,9 @@ strict_equality = True
 #plugins = sqlmypy
 # This one is the official mypy + sqlalchemy 1.4
 plugins = sqlalchemy.ext.mypy.plugin
+# see https://github.com/python-pillow/Pillow/issues/2625
+[mypy-PIL]
+ignore_missing_imports = True
 [mypy-gemmi]
 ignore_missing_imports = True
 [mypy-randomname]
