--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ essential-generators = "1.0"
 aiohttp = "3.8.1"
 alembic = "1.7.7"
 
+# For ZYLA cam image saving
+Pillow = "9.1.0"
+
 [tool.poetry.dev-dependencies]
 black = '22.3.0'
 mypy = '0.942'
