--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,7 @@ aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
 alembic==1.7.7; python_version >= "3.6"
-astroid==2.11.4; python_full_version >= "3.6.2"
+astroid==2.11.5; python_full_version >= "3.6.2"
 async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
@@ -14,7 +14,7 @@ cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
 charset-normalizer==2.0.12; python_full_version >= "3.5.0" and python_version >= "3.6"
 click==8.1.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 colorama==0.4.4; python_full_version >= "3.6.2" and platform_system == "Windows" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.7" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
-coverage==6.3.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+coverage==6.3.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 cryptography==3.4.8; python_version >= "3.6"
 cycler==0.11.0; python_version >= "3.7"
 dill==0.3.4; python_full_version >= "3.6.2"
@@ -59,6 +59,7 @@ openpyxl==3.0.9; python_version >= "3.6"
 packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
+perflint==0.7.3
 pillow==9.1.0; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 platformdirs==2.5.2; python_version >= "3.7" and python_full_version >= "3.6.2"
@@ -70,7 +71,7 @@ pydantic==1.8.2; python_full_version >= "3.6.1"
 pyfakefs==4.5.3; python_version >= "3.6"
 pylint==2.13.5; python_full_version >= "3.6.2"
 pymysql==1.0.2; python_version >= "3.6"
-pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.7"
+pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.7"
 pytest-asyncio==0.17.2; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-subprocess==1.4.1; python_version >= "3.6"
