--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ pillow==9.1.0; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
-pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
 pydantic==1.8.2; python_full_version >= "3.6.1"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.8; python_full_version >= "3.6.8" and python_version >= "3.7"
