--- a/mypy.ini
+++ b/mypy.ini
@@ -15,6 +15,8 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-kamzik3.*]
 ignore_missing_imports = True
+[mypy-importlib_metadata]
+ignore_missing_imports = True
 [mypy-oyaml]
 ignore_missing_imports = True
 [mypy-tqdm]
