--- a/.pylintrc
+++ b/.pylintrc
@@ -87,6 +87,7 @@ disable=invalid-name,
     too-many-lines,
     too-many-boolean-expressions,
     logging-format-interpolation,
+    consider-alternative-union-syntax,
     raise-missing-from,
     deprecated-typing-alias,
     loop-invariant-global-usage,
