CI: Add pylint plugin to warn about dictionary subscripting

--- a/.pylintrc
+++ b/.pylintrc
@@ -31,7 +31,7 @@ limit-inference-results=100
 
 # List of plugins (as comma separated values of python module names) to load,
 # usually to register additional checkers.
-load-plugins=pylint.extensions.typing,pylint.extensions.redefined_variable_type,perflint
+load-plugins=pylint.extensions.typing,pylint.extensions.redefined_variable_type,perflint,cfel_pylint_checkers.no_direct_dict_access
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -72,8 +72,6 @@ disable=invalid-name,
     logging-not-lazy,
     broad-except,
     too-many-arguments,
-    bad-whitespace,
-    bad-continuation,
     bare-except,
     too-few-public-methods,
     too-many-locals,
@@ -90,9 +88,9 @@ disable=invalid-name,
     consider-alternative-union-syntax,
     raise-missing-from,
     deprecated-typing-alias,
-    loop-invariant-global-usage,
     loop-invariant-statement,
-    dotted-import-in-loop
+    dotted-import-in-loop,
+    consider-alternative-union-syntax
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -415,13 +413,6 @@ max-line-length=100
 
 # Maximum number of lines in a module.
 max-module-lines=1000
-
-# List of optional constructs for which whitespace checking is disabled. `dict-
-# separator` is used to allow tabulation in dicts, etc.: {1  : 1,\n222: 2}.
-# `trailing-comma` allows a space between comma and closing bracket: (a, ).
-# `empty-line` allows space-only lines.
-no-space-check=trailing-comma,
-               dict-separator
 
 # Allow the body of a class to be on the same line as the declaration if body
 # contains single statement.
