--- a/mypy.ini
+++ b/mypy.ini
@@ -18,6 +18,12 @@ plugins = sqlalchemy.ext.mypy.plugin
 ignore_missing_imports = True
 [mypy-gemmi]
 ignore_missing_imports = True
+[mypy-pylint.lint]
+ignore_missing_imports = True
+[mypy-astroid]
+ignore_missing_imports = True
+[mypy-pylint.checkers]
+ignore_missing_imports = True
 [mypy-randomname]
 ignore_missing_imports = True
 [mypy-essential_generators]
