--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ karabo-bridge = "0.6.1"
 # for the daemon
 msgpack = "1.0.2"
 # for offline ingest
-EXtra-data = "1.11.0"
+EXtra-data = "1.12.0"
 
 # For the Excel spreadsheet export
 openpyxl = "3.0.9"
@@ -76,7 +76,7 @@ Pillow = "9.1.0"
 black = '22.3.0'
 mypy = '0.942'
 types-pytz = "2021.3.6"
-pylint = '2.13.5'
+pylint = '2.14.4'
 perflint = '0.7.3'
 pyfakefs = '4.5.3'
 openpyxl-stubs = "0.1.21"
@@ -92,6 +92,7 @@ types-requests = "2.26.0"
 types-PyYAML = '5.4.12'
 pytest-asyncio = "0.17.2"
 pytest-subprocess = "1.4.1"
+cfel-pylint-checkers = "1.0.2"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
