--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h5py==3.7.0; python_version >= "3.7"
 hpack==4.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
+hypercorn==0.13.2; python_version >= "3.7"
 hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 idna==3.3; python_version >= "3.6"
 importlib-metadata==4.12.0; python_version < "3.9" and python_version >= "3.7"
