--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "GPL-3.0-or-later"
 [tool.poetry.dependencies]
 python = ">=3.8, <3.11"
 # for general DB access
-SQLAlchemy = { version = "1.4.31", extras = ["mypy", "asyncio"] }
+SQLAlchemy = { version = "1.4.31", extras = ["asyncio"] }
 # for mysql
 pymysql = '1.0.2'
 # for caching_sha2_password access in MySQL
@@ -91,6 +91,7 @@ types-PyYAML = '5.4.12'
 pytest-asyncio = "0.17.2"
 pytest-subprocess = "1.4.1"
 cfel-pylint-checkers = "1.0.2"
+sqlalchemy2-stubs = "0.0.2-alpha.24"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
