--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ isodate==0.6.1
 itsdangerous==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 karabo-bridge==0.6.1
+lark==1.1.2
 mako==1.2.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 msgpack-numpy==0.4.8
