P11: add frame calculator

--- a/mypy.ini
+++ b/mypy.ini
@@ -18,6 +18,9 @@ plugins = sqlalchemy.ext.mypy.plugin
 ignore_missing_imports = True
 [mypy-gemmi]
 ignore_missing_imports = True
+# https://github.com/h5py/h5py/issues/1912
+[mypy-h5py]
+ignore_missing_imports = True
 [mypy-pylint.lint]
 ignore_missing_imports = True
 [mypy-astroid]
