--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ types-requests = "2.26.0"
 # config file
 types-PyYAML = '5.4.12'
 pytest-asyncio = "0.17.2"
+isort = "5.10.1"
 pytest-subprocess = "1.4.1"
 cfel-pylint-checkers = "1.0.2"
 sqlalchemy2-stubs = "0.0.2-alpha.24"
@@ -106,3 +107,8 @@ amarcord-karabo-offline-ingester = "amarcord.cli.karabo_offline_ingester:main"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 7
+force_single_line = "true"
