Use structured logging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,7 @@ Pillow = "9.1.0"
 
 # For parsing the filter expressions
 lark = "1.1.2"
+structlog = "22.1.0"
 
 [tool.poetry.dev-dependencies]
 black = '22.3.0'
