--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -85,6 +85,7 @@ six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python
 sortedcontainers==2.4.0; python_version >= "3.6"
 sqlalchemy2-stubs==0.0.2a24; python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+structlog==22.1.0; python_version >= "3.7"
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.7.2" and python_version >= "3.8"
