Support CrystFEL Online

--- a/mypy.ini
+++ b/mypy.ini
@@ -69,3 +69,5 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-matplotlib.figure]
 ignore_missing_imports = True
+[mypy-pyfakefs.fake_filesystem]
+ignore_missing_imports = True
