--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -64,7 +64,7 @@ pluggy==1.0.0; python_version >= "3.7" and python_full_version < "3.0.0" or pyth
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.7" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
-pydantic==1.8.2; python_full_version >= "3.6.1"
+pydantic==1.10.2; python_version >= "3.7"
 pyfakefs==4.7.0; python_version >= "3.7"
 pylint==2.14.4; python_full_version >= "3.7.2"
 pymysql==1.0.2; python_version >= "3.6"
@@ -96,7 +96,7 @@ types-python-dateutil==2.8.3
 types-pytz==2021.3.6
 types-pyyaml==5.4.12
 types-requests==2.26.0
-typing-extensions==4.3.0; python_version >= "3.8" and python_full_version >= "3.7.2" and python_version < "3.10"
+typing-extensions==4.3.0; python_version < "3.10" and python_full_version >= "3.7.2" and python_version >= "3.8"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wrapt==1.14.1; python_full_version >= "3.7.2"
