--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ pint==0.16.1; python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
-pydantic==1.8.2; python_full_version >= "3.6.1"
+pydantic==1.10.2; python_version >= "3.7"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
@@ -64,7 +64,7 @@ termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.2
-typing-extensions==4.3.0; python_version >= "3.7" and python_full_version >= "3.6.1"
+typing-extensions==4.3.0; python_version >= "3.7"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
