--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,18 +23,14 @@ xdg = '5.1.1'
 typed-argument-parser = '1.7.2'
 # For the config file
 pydantic = '1.10.2'
-# numpy for Karabo statistics, processing results
+# numpy for processing results
 numpy = { version = '1.21.4' }
 # for zmq access in the daemon
 pyzmq = '22.3.0'
 # For validating units
 pint = '0.16.1'
 # for the daemon
-karabo-bridge = "0.6.1"
-# for the daemon
 msgpack = "1.0.2"
-# for offline ingest
-EXtra-data = "1.12.0"
 
 # For the Excel spreadsheet export
 openpyxl = "3.0.9"
@@ -86,6 +82,7 @@ openpyxl-stubs = "0.1.21"
 msgpack-types = "0.1.0"
 pytest = '6.2.5'
 hypothesis = '6.27.1'
+h5py = '3.7.0'
 pytest-cov = '2.12.1'
 types-python-dateutil = "2.8.3"
 # slurm
@@ -100,10 +97,8 @@ sqlalchemy2-stubs = "0.0.2-alpha.24"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
-amarcord-karabo-bridge-daemon = "amarcord.cli.karabo_bridge_daemon:main"
 amarcord-daemon = "amarcord.cli.daemon:main"
 amarcord-webserver = "amarcord.cli.webserver:main"
-amarcord-karabo-offline-ingester = "amarcord.cli.karabo_offline_ingester:main"
 amarcord-slurm-runner = "amarcord.cli.slurm_runner:main"
 
 [build-system]
@@ -138,5 +133,5 @@ check_untyped_defs = true
 plugins = ["sqlalchemy.ext.mypy.plugin"]
 
 [[tool.mypy.overrides]]
-module = ["PIL", "pint", "randomname", "karabo_bridge", "extra_data", "h5py"]
+module = ["PIL", "pint", "randomname", "h5py"]
 ignore_missing_imports = true
