--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,7 +19,6 @@ coverage==6.4.2; python_version >= "3.7" and python_full_version < "3.0.0" or py
 cryptography==3.4.8; python_version >= "3.6"
 dill==0.3.5.1; python_version >= "3.8" and python_version < "3.11" and python_full_version >= "3.7.2"
 et-xmlfile==1.1.0; python_version >= "3.6"
-extra-data==1.12.0; python_version >= "3.6"
 fire==0.4.0
 frozenlist==1.3.0; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
@@ -38,13 +37,11 @@ isodate==0.6.1
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
 itsdangerous==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-karabo-bridge==0.6.1
 lark==1.1.2
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.7.2"
 mako==1.2.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 mccabe==0.7.0; python_version >= "3.8" and python_full_version >= "3.7.2" and python_version < "3.11"
-msgpack-numpy==0.4.8
 msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
@@ -53,8 +50,7 @@ mypy==0.942; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 openpyxl-stubs==0.1.21
 openpyxl==3.0.9; python_version >= "3.6"
-packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
-pandas==1.4.3; python_version >= "3.8"
+packaging==21.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pathspec==0.9.0; python_full_version >= "3.6.2"
 perflint==0.7.3
 pillow==9.1.0; python_version >= "3.7"
@@ -81,7 +77,7 @@ pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.17.0; python_version >= "3.7"
 randomname==0.1.5
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sortedcontainers==2.4.0; python_version >= "3.6"
 sqlalchemy2-stubs==0.0.2a24; python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
@@ -101,7 +97,6 @@ typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wrapt==1.14.1; python_full_version >= "3.7.2"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-xarray==2022.3.0; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
 zipp==3.8.1; python_version < "3.9" and python_version >= "3.7"
