--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,11 @@ click==8.1.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 colorama==0.4.5; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows" and python_version >= "3.7"
 cryptography==3.4.8; python_version >= "3.6"
 et-xmlfile==1.1.0; python_version >= "3.6"
-extra-data==1.12.0; python_version >= "3.6"
 fire==0.4.0
 frozenlist==1.3.0; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-h5py==3.7.0; python_version >= "3.7"
 hpack==4.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 hypercorn==0.13.2; python_version >= "3.7"
 hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -29,18 +27,15 @@ importlib-resources==5.8.0; python_version < "3.9" and python_version >= "3.7"
 isodate==0.6.1
 itsdangerous==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-karabo-bridge==0.6.1
 lark==1.1.2
 mako==1.2.1; python_version >= "3.7"
 markupsafe==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
-msgpack-numpy==0.4.8
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
 mypy-extensions==0.4.3
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 openpyxl==3.0.9; python_version >= "3.6"
-packaging==21.3; python_version >= "3.8"
-pandas==1.4.3; python_version >= "3.8"
+packaging==21.3; python_version >= "3.6"
 pillow==9.1.0; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -57,7 +52,7 @@ pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.17.0; python_version >= "3.7"
 randomname==0.1.5
-six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
+six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 structlog==22.1.0; python_version >= "3.7"
 termcolor==1.1.0
@@ -68,7 +63,6 @@ typing-extensions==4.3.0; python_version >= "3.7"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
-xarray==2022.3.0; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
 zipp==3.8.1; python_version < "3.9" and python_version >= "3.7"
