👷 Ignore migrations in test coverage

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,6 @@ log_cli=true
 # see https://pypi.org/project/pytest-asyncio/
 # Default was "legacy", might still be.
 asyncio_mode = auto
+
+# We cannot really test the migrations effectively.
+addopts = --ignore=amarcord/db/migrations
