⬆️ Update pylint to 2.15.4

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,7 +3,7 @@ aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
 alembic==1.7.7; python_version >= "3.6"
-astroid==2.11.7; python_version >= "3.8" and python_version < "3.11" and python_full_version >= "3.7.2"
+astroid==2.12.11; python_version >= "3.8" and python_version < "3.11" and python_full_version >= "3.7.2"
 async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.1; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
@@ -62,7 +62,7 @@ py==1.11.0; python_version >= "3.7" and python_full_version < "3.0.0" and implem
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.4.0"
 pydantic==1.10.2; python_version >= "3.7"
 pyfakefs==4.7.0; python_version >= "3.7"
-pylint==2.14.4; python_full_version >= "3.7.2"
+pylint==2.15.4; python_full_version >= "3.7.2"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 pytest-asyncio==0.17.2; python_version >= "3.7"
@@ -95,7 +95,7 @@ types-requests==2.26.0
 typing-extensions==4.3.0; python_version < "3.10" and python_full_version >= "3.7.2" and python_version >= "3.8"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
-wrapt==1.14.1; python_full_version >= "3.7.2"
+wrapt==1.14.1; python_version < "3.11" and python_full_version >= "3.7.2"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
