--- a/requirements.txt
+++ b/requirements.txt
@@ -15,22 +15,21 @@ cryptography==3.4.8 ; python_version >= "3.8" and python_version < "3.11"
 et-xmlfile==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
 fire==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
 frozenlist==1.3.0 ; python_version >= "3.8" and python_version < "3.11"
-greenlet==1.1.2 ; python_version >= "3.8" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "3.11"
+greenlet==1.1.2 ; python_version >= "3.8" and python_version < "3.11"
 h11==0.13.0 ; python_version >= "3.8" and python_version < "3.11"
 h2==4.1.0 ; python_version >= "3.8" and python_version < "3.11"
+h5py==3.7.0 ; python_version >= "3.8" and python_version < "3.11"
 hpack==4.0.0 ; python_version >= "3.8" and python_version < "3.11"
 hypercorn==0.13.2 ; python_version >= "3.8" and python_version < "3.11"
 hyperframe==6.0.1 ; python_version >= "3.8" and python_version < "3.11"
 idna==3.3 ; python_version >= "3.8" and python_version < "3.11"
-importlib-metadata==4.12.0 ; python_version >= "3.8" and python_version < "3.9"
+importlib-metadata==6.1.0 ; python_version >= "3.8" and python_version < "3.9"
 importlib-resources==5.8.0 ; python_version >= "3.8" and python_version < "3.9"
-isodate==0.6.1 ; python_version >= "3.8" and python_version < "3.11"
 itsdangerous==2.1.2 ; python_version >= "3.8" and python_version < "3.11"
 jinja2==3.1.2 ; python_version >= "3.8" and python_version < "3.11"
 lark==1.1.2 ; python_version >= "3.8" and python_version < "3.11"
 mako==1.2.1 ; python_version >= "3.8" and python_version < "3.11"
 markupsafe==2.1.1 ; python_version >= "3.8" and python_version < "3.11"
-msgpack==1.0.2 ; python_version >= "3.8" and python_version < "3.11"
 multidict==6.0.2 ; python_version >= "3.8" and python_version < "3.11"
 mypy-extensions==0.4.3 ; python_version >= "3.8" and python_version < "3.11"
 numpy==1.21.4 ; python_version >= "3.8" and python_version < "3.11"
@@ -41,13 +40,11 @@ pint==0.16.1 ; python_version >= "3.8" and python_version < "3.11"
 priority==2.0.0 ; python_version >= "3.8" and python_version < "3.11"
 py==1.11.0 ; python_version >= "3.8" and python_version < "3.11" and implementation_name == "pypy"
 pycparser==2.21 ; python_version >= "3.8" and python_version < "3.11"
-pydantic==1.10.2 ; python_version >= "3.8" and python_version < "3.11"
-pymysql==1.0.2 ; python_version >= "3.8" and python_version < "3.11"
+pydantic==1.10.7 ; python_version >= "3.8" and python_version < "3.11"
 pyparsing==3.0.9 ; python_version >= "3.8" and python_version < "3.11"
 python-dateutil==2.8.2 ; python_version >= "3.8" and python_version < "3.11"
 python-magic==0.4.24 ; python_version >= "3.8" and python_version < "3.11"
 pytz==2021.3 ; python_version >= "3.8" and python_version < "3.11"
-pyyaml==5.4.1 ; python_version >= "3.8" and python_version < "3.11"
 pyzmq==22.3.0 ; python_version >= "3.8" and python_version < "3.11"
 quart-cors==0.5.0 ; python_version >= "3.8" and python_version < "3.11"
 quart==0.17.0 ; python_version >= "3.8" and python_version < "3.11"
@@ -58,12 +55,10 @@ sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.11
 structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.11"
 termcolor==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
 toml==0.10.2 ; python_version >= "3.8" and python_version < "3.11"
-tqdm==4.62.3 ; python_version >= "3.8" and python_version < "3.11"
 typed-argument-parser==1.7.2 ; python_version >= "3.8" and python_version < "3.11"
 typing-extensions==4.3.0 ; python_version >= "3.8" and python_version < "3.11"
 typing-inspect==0.7.1 ; python_version >= "3.8" and python_version < "3.11"
 werkzeug==2.1.2 ; python_version >= "3.8" and python_version < "3.11"
 wsproto==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
-xdg==5.1.1 ; python_version >= "3.8" and python_version < "3.11"
 yarl==1.7.2 ; python_version >= "3.8" and python_version < "3.11"
 zipp==3.8.1 ; python_version >= "3.8" and python_version < "3.9"
