--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -78,6 +78,7 @@ sortedcontainers==2.4.0 ; python_version >= "3.8" and python_version < "3.11"
 sqlalchemy2-stubs==0.0.2a24 ; python_version >= "3.8" and python_version < "3.11"
 sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
 sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
+structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.11"
 structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.11"
 termcolor==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
 toml==0.10.2 ; python_version >= "3.8" and python_version < "3.11"
