--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ randomname==0.1.5 ; python_version >= "3.8" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
 sqlalchemy==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
 sqlalchemy[asyncio]==1.4.31 ; python_version >= "3.8" and python_version < "3.11"
+structlog-overtime==1.0.1 ; python_version >= "3.8" and python_version < "3.11"
 structlog==22.1.0 ; python_version >= "3.8" and python_version < "3.11"
 termcolor==1.1.0 ; python_version >= "3.8" and python_version < "3.11"
 toml==0.10.2 ; python_version >= "3.8" and python_version < "3.11"
